--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -1,38 +1,41 @@
 ---
-import type { GetStaticPaths, InferGetStaticPropsType } from 'astro'
+import type { GetStaticPaths, InferGetStaticPropsType } from "astro";
 
-import Layout from '../layouts/Layout.astro'
-import { getAllPosts } from '../utils/posts'
+import Layout from "../layouts/Layout.astro";
+import { getAllPosts } from "../utils/posts";
+import "../styles/markdown.css";
 
 export const getStaticPaths = (async () => {
-	const articles = await getAllPosts()
-	return articles.map((entry) => ({
-		params: { slug: entry.slug },
-		props: { entry }
-	}))
-}) satisfies GetStaticPaths
+    const articles = await getAllPosts();
+    return articles.map((entry) => ({
+        params: { slug: entry.slug },
+        props: { entry },
+    }));
+}) satisfies GetStaticPaths;
 
-type Props = InferGetStaticPropsType<typeof getStaticPaths>
+type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
-const { entry } = Astro.props
+const { entry } = Astro.props;
 const { Content, remarkPluginFrontmatter } = await entry.render();
 const title = remarkPluginFrontmatter.title;
-const date = new Date(remarkPluginFrontmatter.publishDate)
+const date = new Date(remarkPluginFrontmatter.publishDate);
 ---
 
-<Layout title={remarkPluginFrontmatter.title} description={`thoughts about ${title.toLowerCase()}`}`>
-	<div class="article-body">
-		<h1>{title}</h1>
-		<span>{date.toISOString().split("T")[0]}</span>
-		<hr/>
-		<Content />
-	</div>
+<Layout title={remarkPluginFrontmatter.title} description={`thoughts about ${title.toLowerCase()}`} `>
+    <div class="article-body">
+        <h1>{title}</h1>
+        <span>{date.toISOString().split("T")[0]}</span>
+        <hr />
+        <div class="markdown-body">
+            <Content />
+        </div>
+    </div>
 </Layout>
 
 <style>
-	.article-body{
-		margin: 0 auto;
-		max-width: 800px;
-		padding: 20px;
-	}
+    .article-body {
+        margin: 0 auto;
+        max-width: 800px;
+        padding: 20px;
+    }
 </style>
