--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,4 +29,7 @@ const { title, description = "thoughts" } = Astro.props;
         font-family: "Montserrat-Medium", monospace, system-ui, sans-serif;
         background-color: snow;
     }
+    body {
+        margin: 0px;
+    }
 </style>
