--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -24,7 +24,10 @@ const date = new Date(remarkPluginFrontmatter.publishDate);
 <Layout title={remarkPluginFrontmatter.title} description={`thoughts about ${title.toLowerCase()}`} `>
     <div class="article-body">
         <h1>{title}</h1>
-        <span>{date.toISOString().split("T")[0]}</span>
+        <div class="under-title">
+            <a class="back-link" href="../"> 🔙 </a>
+            <span>{date.toISOString().split("T")[0]}</span>
+        </div>
         <hr />
         <div class="markdown-body">
             <Content />
@@ -33,6 +36,14 @@ const date = new Date(remarkPluginFrontmatter.publishDate);
 </Layout>
 
 <style>
+    .under-title {
+        display: flex;
+        justify-content: space-between;
+    }
+    .back-link {
+        color: inherit;
+        text-decoration: none;
+    }
     .article-body {
         margin: 0 auto;
         max-width: 800px;
