--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -89,7 +89,9 @@ const repo = "https://github.com/Its-Just-Nans/thoughts";
         text-decoration: none;
         margin-bottom: 10px;
         display: block;
+        text-transform: lowercase;
     }
+
     @media screen and (max-width: 800px) {
         ul {
             padding-inline-start: 15px;
