--- a/src/components/ResetState.astro
+++ b/src/components/ResetState.astro
@@ -12,7 +12,7 @@ const customId = `button-${article}-${Math.random().toString(36).substring(7)}`;
     <button id={customId}>{button}</button>
 </div>
 
-<script define:vars={{ article, customId }}>
+<script is:inline define:vars={{ article, customId }}>
     document.getElementById(customId).addEventListener("click", () => {
         localStorage.removeItem(`${article}-state`);
         window.location.reload();
