--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,4 +34,17 @@ const { title, description = "thoughts" } = Astro.props;
     body {
         margin: 0px;
     }
+    body::-webkit-scrollbar {
+        width: 10px;
+        height: 5px;
+    }
+    body::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+    body::-webkit-scrollbar-thumb {
+        background: #888;
+    }
+    body    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
 </style>
