--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -20,7 +20,7 @@ const { page } = Astro.props;
 const project = "thoughts";
 const site = "https://n4n5.dev";
 const repo = `https://github.com/Its-Just-Nans/${project}`;
-const rss = `https://${project}.n4n5.dev/rss.xml`;
+const rss = `/rss.xml`;
 
 let idx = 0;
 const g = () => {
