--- a/src/components/DefaultMenu.astro
+++ b/src/components/DefaultMenu.astro
@@ -1,5 +1,5 @@
 ---
-import { isSchool, isDev, isWork } from "../utils/menus";
+import { isSchool, isDev, isWork, isThought } from "../utils/menus";
 import GithubIcon from "./GithubIcon.astro";
 const menus = [
     [
@@ -14,6 +14,8 @@ const menus = [
                 el[0].classList.toggle("hide-emoji");
             },
         },
+    ],
+    [
         {
             ico: isSchool,
             title: "only study",
@@ -52,6 +54,21 @@ const menus = [
             subtitle: null,
             func: () => {
                 const el = document.getElementById("isWork") as HTMLInputElement;
+                if (el.checked) {
+                    (document.getElementById("isAll") as HTMLInputElement).checked = true;
+                } else {
+                    el.checked = true;
+                }
+            },
+        },
+        {
+            ico: isThought,
+            title: "only thoughts",
+            id: "only-thoughts",
+            link: null,
+            subtitle: null,
+            func: () => {
+                const el = document.getElementById("isThought") as HTMLInputElement;
                 if (el.checked) {
                     (document.getElementById("isAll") as HTMLInputElement).checked = true;
                 } else {
