--- a/src/components/RightClickMenu.astro
+++ b/src/components/RightClickMenu.astro
@@ -16,9 +16,9 @@
                 false
             );
             menu.style.display = "block";
-            menu.style.position = "absolute";
-            menu.style.top = `${e.pageY}px`;
-            menu.style.left = `${e.pageX}px`;
+            menu.style.position = "fixed";
+            menu.style.top = `${e.clientY}px`;
+            menu.style.left = `${e.clientX}px`;
             menu.addEventListener(
                 "click",
                 (e) => {
@@ -36,11 +36,12 @@
         z-index: 1000;
         font-family: "Inter", sans-serif;
         display: flex;
-        position: absolute;
+        position: fixed;
         flex-direction: column;
         background-color: white;
         border-radius: 10px;
         box-shadow: 0 10px 20px rgba(64, 64, 64, 0.15);
         width: 250px;
+        overflow: hidden;
     }
 </style>
