--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -195,6 +195,7 @@ const removeAccents = (str: string) => str.normalize("NFD").replace(/[\u0300-\u0
     }
     .article-link {
         color: black;
+        flex: 1;
         text-decoration: none;
         display: inline-block;
         text-transform: lowercase;
